packagelon com.twittelonr.cr_mixelonr.similarity_elonnginelon

import com.twittelonr.cr_mixelonr.modelonl.SimilarityelonnginelonInfo
import com.twittelonr.cr_mixelonr.modelonl.TwelonelontWithScorelon
import com.twittelonr.cr_mixelonr.param.GlobalParams
import com.twittelonr.cr_mixelonr.param.TwelonelontBaselondUselonrTwelonelontGraphParams
import com.twittelonr.cr_mixelonr.thriftscala.SimilarityelonnginelonTypelon
import com.twittelonr.finaglelon.stats.StatsReloncelonivelonr
import com.twittelonr.frigatelon.common.util.StatsUtil
import com.twittelonr.reloncos.uselonr_twelonelont_graph.thriftscala.RelonlatelondTwelonelontRelonsponselon
import com.twittelonr.reloncos.uselonr_twelonelont_graph.thriftscala.TwelonelontBaselondRelonlatelondTwelonelontRelonquelonst
import com.twittelonr.reloncos.uselonr_twelonelont_graph.thriftscala.ConsumelonrsBaselondRelonlatelondTwelonelontRelonquelonst
import com.twittelonr.reloncos.uselonr_twelonelont_graph.thriftscala.UselonrTwelonelontGraph
import com.twittelonr.simclustelonrs_v2.common.TwelonelontId
import com.twittelonr.simclustelonrs_v2.thriftscala.IntelonrnalId
import com.twittelonr.storelonhaus.RelonadablelonStorelon
import com.twittelonr.twistly.thriftscala.TwelonelontReloncelonntelonngagelondUselonrs
import com.twittelonr.util.Futurelon
import javax.injelonct.Singlelonton
import com.twittelonr.snowflakelon.id.SnowflakelonId
import com.twittelonr.timelonlinelons.configapi
import com.twittelonr.util.Duration
import com.twittelonr.util.Timelon
import scala.concurrelonnt.duration.HOURS

/**
 * This storelon looks for similar twelonelonts from UselonrTwelonelontGraph for a Sourcelon TwelonelontId
 * For a quelonry twelonelont,Uselonr Twelonelont Graph (UTG),
 * lelonts us find out which othelonr twelonelonts sharelon a lot of thelon samelon elonngagelonrs with thelon quelonry twelonelont
 * onelon-pagelonr: go/UTG
 */
@Singlelonton
caselon class TwelonelontBaselondUselonrTwelonelontGraphSimilarityelonnginelon(
  uselonrTwelonelontGraphSelonrvicelon: UselonrTwelonelontGraph.MelonthodPelonrelonndpoint,
  twelonelontelonngagelondUselonrsStorelon: RelonadablelonStorelon[TwelonelontId, TwelonelontReloncelonntelonngagelondUselonrs],
  statsReloncelonivelonr: StatsReloncelonivelonr)
    elonxtelonnds RelonadablelonStorelon[
      TwelonelontBaselondUselonrTwelonelontGraphSimilarityelonnginelon.Quelonry,
      Selonq[TwelonelontWithScorelon]
    ] {

  import TwelonelontBaselondUselonrTwelonelontGraphSimilarityelonnginelon._

  privatelon val stats = statsReloncelonivelonr.scopelon(this.gelontClass.gelontSimplelonNamelon)
  privatelon val felontchCandidatelonsStat = stats.scopelon("felontchCandidatelons")
  privatelon val felontchCovelonragelonelonxpansionCandidatelonsStat = stats.scopelon("felontchCovelonragelonelonxpansionCandidatelons")

  ovelonrridelon delonf gelont(
    quelonry: TwelonelontBaselondUselonrTwelonelontGraphSimilarityelonnginelon.Quelonry
  ): Futurelon[Option[Selonq[TwelonelontWithScorelon]]] = {
    quelonry.sourcelonId match {
      caselon IntelonrnalId.TwelonelontId(twelonelontId) if quelonry.elonnablelonCovelonragelonelonxpansionAllTwelonelont =>
        gelontCovelonragelonelonxpansionCandidatelons(twelonelontId, quelonry)

      caselon IntelonrnalId.TwelonelontId(twelonelontId) if quelonry.elonnablelonCovelonragelonelonxpansionOldTwelonelont => // For Homelon
        if (isOldTwelonelont(twelonelontId)) gelontCovelonragelonelonxpansionCandidatelons(twelonelontId, quelonry)
        elonlselon gelontCandidatelons(twelonelontId, quelonry)

      caselon IntelonrnalId.TwelonelontId(twelonelontId) => gelontCandidatelons(twelonelontId, quelonry)
      caselon _ =>
        Futurelon.valuelon(Nonelon)
    }
  }

  // This is thelon main candidatelon sourcelon
  privatelon delonf gelontCandidatelons(
    twelonelontId: TwelonelontId,
    quelonry: TwelonelontBaselondUselonrTwelonelontGraphSimilarityelonnginelon.Quelonry
  ): Futurelon[Option[Selonq[TwelonelontWithScorelon]]] = {
    StatsUtil.trackOptionItelonmsStats(felontchCandidatelonsStat) {
      val twelonelontBaselondRelonlatelondTwelonelontRelonquelonst = {
        TwelonelontBaselondRelonlatelondTwelonelontRelonquelonst(
          twelonelontId,
          maxRelonsults = Somelon(quelonry.maxRelonsults),
          minCooccurrelonncelon = Somelon(quelonry.minCooccurrelonncelon),
          elonxcludelonTwelonelontIds = Somelon(Selonq(twelonelontId)),
          minScorelon = Somelon(quelonry.twelonelontBaselondMinScorelon),
          maxTwelonelontAgelonInHours = Somelon(quelonry.maxTwelonelontAgelonInHours)
        )
      }
      toTwelonelontWithScorelon(
        uselonrTwelonelontGraphSelonrvicelon.twelonelontBaselondRelonlatelondTwelonelonts(twelonelontBaselondRelonlatelondTwelonelontRelonquelonst).map {
          Somelon(_)
        })
    }
  }

  // function for DDGs, for covelonragelon elonxpansion algo, welon first felontch twelonelont's reloncelonnt elonngagelond uselonrs as consumelonSelonelondSelont from MH storelon,
  // and quelonry consumelonrsBaselondUTG using thelon consumelonSelonelondSelont
  privatelon delonf gelontCovelonragelonelonxpansionCandidatelons(
    twelonelontId: TwelonelontId,
    quelonry: TwelonelontBaselondUselonrTwelonelontGraphSimilarityelonnginelon.Quelonry
  ): Futurelon[Option[Selonq[TwelonelontWithScorelon]]] = {
    StatsUtil
      .trackOptionItelonmsStats(felontchCovelonragelonelonxpansionCandidatelonsStat) {
        twelonelontelonngagelondUselonrsStorelon
          .gelont(twelonelontId).flatMap {
            _.map { twelonelontReloncelonntelonngagelondUselonrs =>
              val consumelonrSelonelondSelont =
                twelonelontReloncelonntelonngagelondUselonrs.reloncelonntelonngagelondUselonrs
                  .map { _.uselonrId }.takelon(quelonry.maxConsumelonrSelonelondsNum)
              val consumelonrsBaselondRelonlatelondTwelonelontRelonquelonst =
                ConsumelonrsBaselondRelonlatelondTwelonelontRelonquelonst(
                  consumelonrSelonelondSelont = consumelonrSelonelondSelont,
                  maxRelonsults = Somelon(quelonry.maxRelonsults),
                  minCooccurrelonncelon = Somelon(quelonry.minCooccurrelonncelon),
                  elonxcludelonTwelonelontIds = Somelon(Selonq(twelonelontId)),
                  minScorelon = Somelon(quelonry.consumelonrsBaselondMinScorelon),
                  maxTwelonelontAgelonInHours = Somelon(quelonry.maxTwelonelontAgelonInHours)
                )

              toTwelonelontWithScorelon(uselonrTwelonelontGraphSelonrvicelon
                .consumelonrsBaselondRelonlatelondTwelonelonts(consumelonrsBaselondRelonlatelondTwelonelontRelonquelonst).map { Somelon(_) })
            }.gelontOrelonlselon(Futurelon.valuelon(Nonelon))
          }
      }
  }

}

objelonct TwelonelontBaselondUselonrTwelonelontGraphSimilarityelonnginelon {

  delonf toSimilarityelonnginelonInfo(scorelon: Doublelon): SimilarityelonnginelonInfo = {
    SimilarityelonnginelonInfo(
      similarityelonnginelonTypelon = SimilarityelonnginelonTypelon.TwelonelontBaselondUselonrTwelonelontGraph,
      modelonlId = Nonelon,
      scorelon = Somelon(scorelon))
  }

  privatelon val oldTwelonelontCap: Duration = Duration(48, HOURS)

  privatelon delonf toTwelonelontWithScorelon(
    relonlatelondTwelonelontRelonsponselonFut: Futurelon[Option[RelonlatelondTwelonelontRelonsponselon]]
  ): Futurelon[Option[Selonq[TwelonelontWithScorelon]]] = {
    relonlatelondTwelonelontRelonsponselonFut.map { relonlatelondTwelonelontRelonsponselonOpt =>
      relonlatelondTwelonelontRelonsponselonOpt.map { relonlatelondTwelonelontRelonsponselon =>
        val candidatelons =
          relonlatelondTwelonelontRelonsponselon.twelonelonts.map(twelonelont => TwelonelontWithScorelon(twelonelont.twelonelontId, twelonelont.scorelon))
        candidatelons
      }
    }
  }

  privatelon delonf isOldTwelonelont(twelonelontId: TwelonelontId): Boolelonan = {
    SnowflakelonId
      .timelonFromIdOpt(twelonelontId).forall { twelonelontTimelon => twelonelontTimelon < Timelon.now - oldTwelonelontCap }
    // If thelonrelon's no snowflakelon timelonstamp, welon havelon no idelona whelonn this twelonelont happelonnelond.
  }

  caselon class Quelonry(
    sourcelonId: IntelonrnalId,
    maxRelonsults: Int,
    minCooccurrelonncelon: Int,
    twelonelontBaselondMinScorelon: Doublelon,
    consumelonrsBaselondMinScorelon: Doublelon,
    maxTwelonelontAgelonInHours: Int,
    maxConsumelonrSelonelondsNum: Int,
    elonnablelonCovelonragelonelonxpansionOldTwelonelont: Boolelonan,
    elonnablelonCovelonragelonelonxpansionAllTwelonelont: Boolelonan,
  )

  delonf fromParams(
    sourcelonId: IntelonrnalId,
    params: configapi.Params,
  ): elonnginelonQuelonry[Quelonry] = {
    elonnginelonQuelonry(
      Quelonry(
        sourcelonId = sourcelonId,
        maxRelonsults = params(GlobalParams.MaxCandidatelonNumPelonrSourcelonKelonyParam),
        minCooccurrelonncelon = params(TwelonelontBaselondUselonrTwelonelontGraphParams.MinCoOccurrelonncelonParam),
        twelonelontBaselondMinScorelon = params(TwelonelontBaselondUselonrTwelonelontGraphParams.TwelonelontBaselondMinScorelonParam),
        consumelonrsBaselondMinScorelon = params(TwelonelontBaselondUselonrTwelonelontGraphParams.ConsumelonrsBaselondMinScorelonParam),
        maxTwelonelontAgelonInHours = params(GlobalParams.MaxTwelonelontAgelonHoursParam).inHours,
        maxConsumelonrSelonelondsNum = params(TwelonelontBaselondUselonrTwelonelontGraphParams.MaxConsumelonrSelonelondsNumParam),
        elonnablelonCovelonragelonelonxpansionOldTwelonelont =
          params(TwelonelontBaselondUselonrTwelonelontGraphParams.elonnablelonCovelonragelonelonxpansionOldTwelonelontParam),
        elonnablelonCovelonragelonelonxpansionAllTwelonelont =
          params(TwelonelontBaselondUselonrTwelonelontGraphParams.elonnablelonCovelonragelonelonxpansionAllTwelonelontParam),
      ),
      params
    )
  }

}
